--- a/CompanySite/CompanySite/appsettings.json
+++ b/CompanySite/CompanySite/appsettings.json
@@ -1,10 +1,9 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionString": "Data Source=DESKTOP-4IV5752; Database=CompanySite; Persist Security Info=false; User ID='sa'; Password='admin'; MultipleActiveResultSets=True; Trusted_Connection=False;",
+    "CompanyName": "My Company",
+    "CompanyPhone": "+38 (011) 111-11-11",
+    "CompanyPhoneShort": "+380111111111",
+    "CompanyEmail": "myCompany@company.com"
+  }
 }
