--- a/CompanySite/CompanySite/CompanySite.csproj
+++ b/CompanySite/CompanySite/CompanySite.csproj
@@ -15,11 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Admin\Controllers\" />
-    <Folder Include="Areas\Admin\Views\" />
     <Folder Include="Models\ViewComponents\" />
     <Folder Include="wwwroot\css\" />
-    <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\images\serviceImages\" />
   </ItemGroup>
 
   <ItemGroup>
